sandbox/envoy.yaml
---
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_http
            use_remote_address: true
            xff_num_trusted_hops: 1
            route_config:
              name: local_route
              virtual_hosts:
                - name: local_service
                  domains:
                    - "*"
                  routes:
                    - match:
                        prefix: "/ratelimit-overlimit"
                      route:
                        cluster: upstream
                        rate_limits:
                        - actions:
                          - generic_key:
                              descriptor_key: x-overlimit
                              descriptor_value: "a"
                    - match:
                        prefix: "/ratelimit-ok"
                      route:
                        cluster: upstream
                        rate_limits:
                        - actions:
                          - generic_key:
                              descriptor_key: some_value
                              descriptor_value: some_value
            http_filters:
            - name: envoy.filters.http.ratelimit
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                domain: rl
                failure_mode_deny: true
                timeout: 3s
                rate_limit_service:
                  transport_api_version: "v3"
                  grpc_service:
                    envoy_grpc:
                      cluster_name: rlsbin
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: upstream
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: upstream
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: upstream
                  port_value: 3000
    - name: rlsbin
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: round_robin
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: rlsbin
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: rlsbin
                  port_value: 8081
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
